--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curagenie - AI-Powered Healthcare Solutions</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
             </div>
             <div class="hero-image">
                 <div class="floating-brain">
-                    <img src="images/hero_img.svg" alt="AI Brain" class="brain-image">
+                    <img src="hero_img.svg" alt="AI Brain" class="brain-image">
                     <div class="pulse-circle"></div>
                     <div class="floating-icon icon-1"><i class="fas fa-heartbeat"></i></div>
                     <div class="floating-icon icon-2"><i class="fas fa-stethoscope"></i></div>
@@ -70,7 +70,7 @@
             <div class="about-content">
                 <div class="about-image reveal-left">
                     <div class="glass-card">
-                        <img src="images/3724894.jpg" alt="Curagenie Platform">
+                        <img src="3724894.jpg" alt="Curagenie Platform">
                     </div>
                 </div>
                 <div class="about-text reveal-right">
@@ -300,12 +300,12 @@
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p class="copyright">© 2023 Curagenie. All rights reserved.</p>
+                <p class="copyright">© 2025 Curagenie. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
