--- a/diagnosis.html
+++ b/diagnosis.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Diagnosis Demo - Curagenie</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/diagnosis.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="diagnosis.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -239,12 +239,12 @@
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p class="copyright">© 2023 Curagenie. All rights reserved.</p>
+                <p class="copyright">© 2025 Curagenie. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/diagnosis.js"></script>
+    <script src="main.js"></script>
+    <script src="diagnosis.js"></script>
 </body>
 </html>
